--- a/management-ui/yo/bower.json
+++ b/management-ui/yo/bower.json
@@ -13,6 +13,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-bootstrap": "~1.3.1",
+    "angular-ui-select": "^0.12.1",
+    "angular-ui-grid": "~3.1.1",
     "bootswatch": "~3.3.6+1",
     "bootbox": "~4.4.0"
   },
